cleaned up html

--- a/src/index.partial.html
+++ b/src/index.partial.html
@@ -1,7 +1,7 @@
 
 <div class="app">
-  <div class="json"></div>
-  <h2>Books Read</h2>
-  <section class="books">
-  </section>
+	<h2>Resources While Working</h2>
+	<div class="json"></div>
+	<h2>Books Read</h2>
+	<section class="books"></section>
 </div>
