--- a/src/index.partial.html
+++ b/src/index.partial.html
@@ -1,7 +1,14 @@
-
 <div class="app">
-	<h2>Resources While Working</h2>
-	<div class="json"></div>
-	<h2>Books Read</h2>
-	<section class="books"></section>
+    <section>
+        <h2>JSON Resources</h2>
+        <div class="json"></div>
+    </section>
+    <section>
+        <h2>Progress</h2>
+        <div class="percentages"></div>
+    </section>
+    <section>
+        <h2>Books Read</h2>
+        <div class="books"></div>
+    </section>
 </div>
